--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -86,7 +86,7 @@
             <div class="col-lg-12" id="page-content2">
               <div id="page-content">
                   <div class="github_edit_page print_hide" style="float: right;position:relative;top:-0.6em;">
-                      <a href="https://github.com/korlibs/docs.korge.org/edit/master/{{ page.path }}" class="btn btn-default" target="_blank" rel="noopener">
+                      <a href="https://github.com/korlibs/korge/edit/main/docs/{{ page.path }}" class="btn btn-default" target="_blank" rel="noopener">
                           <i class="fab fa-github" aria-hidden="true" style="font-size:1.5em;"></i> Suggest Change / Typo
                       </a>
                   </div>
