Adds documentation feedback

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -133,6 +133,16 @@
               <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
               {% endif %}
               {% endunless %}
+
+                Was this article useful?
+                <div style="display:inline-block;" class="btn-group">
+                <a class="btn btn-default" style="color:#426c42;" href="https://docs.google.com/forms/d/e/1FAIpQLSclcND_ZoRdwqW-GvBus9gAaA9Ek-130M3FcC6qk7huWxCfvA/viewform?usp=pp_url&entry.743568020={{ page.url }}&entry.593163446=5" target="_blank">
+                    <i class="fas fa-thumbs-up"></i>
+                </a>
+                <a class="btn btn-default" style="color:#863333;" href="https://docs.google.com/forms/d/e/1FAIpQLSclcND_ZoRdwqW-GvBus9gAaA9Ek-130M3FcC6qk7huWxCfvA/viewform?usp=pp_url&entry.743568020={{ page.url }}&entry.593163446=1" target="_blank">
+                    <i class="fas fa-thumbs-down"></i>
+                </a>
+                </div>
             </div>
           </div>
         </div>
