--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -6,6 +6,7 @@ noindex: true
 @import "./_colors";
 
 @import "./bootstrap.css";
+//@import "./bootstrap5.min.css";
 @import "./simple-sidebar";
 @import "./fontawesome-free-5.7.1-web/css/all.css";
 
