--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,8 +17,14 @@
     <title>{{ page.title }}</title>
 
     <link rel="canonical" href="{{ page.url | absolute_url }}">
+    <link rel="icon" href="/i/icon.avif" />
+    <!--
+    <link rel="alternate" type="application/rss+xml" title="KorGE" href="/feed.xml">
+    -->
 
     <script src="/assets/docs/color-modes.js"></script>
+
+    <link rel="stylesheet" href="/assets/docs/DocSearch.css" />
 
     <link href="/assets/bootstrap/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link href="/assets/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" crossorigin="anonymous">
@@ -27,6 +33,8 @@
     <link href="/assets/docs/docs.css" rel="stylesheet">
 
     <meta name="theme-color" content="#712cf9">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3395905965441916" crossorigin="anonymous"></script>
 
     <!-- Favicons -->
     <!--
@@ -65,6 +73,8 @@
             margin-bottom: 0.2rem;
         }
     </style>
+
+    <link rel="stylesheet" href="/newsearch.css">
 </head>
 <body data-bs-spy="scroll" data-bs-target="#toc">
 <div class="skippy visually-hidden-focusable overflow-hidden">
@@ -88,7 +98,13 @@
             <img style="width:32px;height:32px;" src="/i/logos/korge.svg" />
         </a>
 
+
         <div class="d-flex">
+            <form role="search" action="/search">
+            </form>
+            <div class="bd-search" id="docsearch" data-bd-docs-version="5.3">
+                <input type="search" class="form-control" placeholder="Search... (press 't' to focus)" id="searchq" name="q" />
+            </div>
             <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-label="Toggle navigation">
                 <i class="bi bi-three-dots"></i>
             </button>
@@ -302,6 +318,29 @@
 
 <script src="/assets/docs/clipboard.min.js"></script>
 <script src="/assets/docs/docs.js"></script>
+
+<script type="text/javascript" src="/newsearch.js" defer onload="
+	window.addEventListener('DOMContentLoaded', () => {
+		newSearchHook('#searchq', '/all.html?{{ site.time | date: '%s' }}')
+
+		document.addEventListener('keyup', (e) => {
+			const isInput = document.activeElement.tagName.toUpperCase() === 'INPUT';
+			if (e.key === 'Escape' && isInput) {
+				document.activeElement.blur();
+			}
+			if (e.key === 't' && !isInput) {
+				document.querySelector('#searchq').focus();
+				document.querySelector('#searchq').select();
+			}
+		});
+		document.querySelector('#searchq').addEventListener('focus', () => {
+			document.querySelector('#searchq').placeholder = 'Search... (type, then use \'↑\', \'↓\' and \'⏎\' to select results)';
+		});
+		document.querySelector('#searchq').addEventListener('blur', () => {
+			document.querySelector('#searchq').placeholder = 'Search... (press \'t\' to focus)';
+		});
+	});
+"></script>
 
 <div class="position-fixed" aria-hidden="true"><input type="text" tabindex="-1"></div>
 
