--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -77,6 +77,9 @@
     <link rel="stylesheet" href="/newsearch.css">
 </head>
 <body data-bs-spy="scroll" data-bs-target="#toc">
+
+{% include analytics.html %}
+
 <div class="skippy visually-hidden-focusable overflow-hidden">
     <div class="container-xl">
         <a class="d-inline-flex p-2 m-1" href="#content">Skip to main content</a>
