docs: More work

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,9 +12,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
-    <meta name="author" content="{{ site.description }}">
+    <meta name="author" content="{{ site.authors }}">
 
-    <title>{{ page.title }}</title>
+    <title>KorGE: {{ page.title }}</title>
 
     <link rel="canonical" href="{{ page.url | absolute_url }}">
     <link rel="icon" href="/i/icon.avif" />
@@ -106,7 +106,7 @@
             <form role="search" action="/search">
             </form>
             <div class="bd-search" id="docsearch" data-bd-docs-version="5.3">
-                <input type="search" class="form-control" placeholder="Search... (press 't' to focus)" id="searchq" name="q" />
+                <input type="search" class="form-control" placeholder="Search... (press 't' to focus)" id="searchq" name="q" style="width:210px;" />
             </div>
             <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-label="Toggle navigation">
                 <i class="bi bi-three-dots"></i>
@@ -260,6 +260,15 @@
                 <h1 class="bd-title mb-0" id="content">{{ page.title }}</h1>
             </div>
             <p class="bd-lead">{{ page.description }}</p>
+            <div style="font-size:0.9rem;font-style: italic;color:var(--bs-gray)">
+                {% if page.version_review %}
+                Document reviewed for {{ page.version_review }}
+                {% else %}
+                Document not reviewed yet, might be outdated. Please,
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSclcND_ZoRdwqW-GvBus9gAaA9Ek-130M3FcC6qk7huWxCfvA/viewform?usp=pp_url&entry.743568020=/math/geometry2d/&entry.593163446=1" target="_blank">let us know</a>
+                if you find something invalid here.
+                {% endif %}
+            </div>
         </div>
 
 
@@ -289,8 +298,8 @@
         <div class="row">
             <div class="col-lg-3 mb-3">
                 <a class="d-inline-flex align-items-center mb-2 text-body-emphasis text-decoration-none" href="/" aria-label="{{ page.title }}">
-                    <img src="/i/logos/korge.svg" />
-                    <span class="fs-5">{{ site.title }}</span>
+                    <img src="/i/logos/korge.svg" style="width:3rem;height:3rem;" />
+                    <span class="fs-5">&nbsp;{{ site.title }}</span>
                 </a>
                 <div class="small">
                     {% include bottom_desc.md %}
