--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -36,32 +36,6 @@
 
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3395905965441916" crossorigin="anonymous"></script>
 
-    <!-- Favicons -->
-    <!--
-    <link rel="apple-touch-icon" href="/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-    <link rel="icon" href="/assets/img/favicons/favicon.ico">
-
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@getbootstrap">
-    <meta name="twitter:creator" content="@getbootstrap">
-    <meta name="twitter:title" content="Get started with Bootstrap">
-    <meta name="twitter:description" content="Bootstrap is a powerful, feature-packed frontend toolkit. Build anything—from prototype to production—in minutes.">
-    <meta name="twitter:image" content="https://getbootstrap.com/assets/brand/bootstrap-social.png">
-
-    <meta property="og:url" content="https://getbootstrap.com/getting-started/introduction/">
-    <meta property="og:title" content="Get started with Bootstrap">
-    <meta property="og:description" content="Bootstrap is a powerful, feature-packed frontend toolkit. Build anything—from prototype to production—in minutes.">
-    <meta property="og:type" content="article">
-    <meta property="og:image" content="https://getbootstrap.com/assets/brand/bootstrap-social.png">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="2000">
-    <meta property="og:image:height" content="1000">
-    -->
-
     <style>
         .bd-links-link {
             width: 100% !important;
@@ -103,11 +77,11 @@
 
 
         <div class="d-flex">
-            <form role="search" action="/search">
-            </form>
+            <!--<form role="search" action="/search" method="get">-->
             <div class="bd-search" id="docsearch" data-bd-docs-version="5.3">
                 <input type="search" class="form-control" placeholder="Search... (press 't' to focus)" id="searchq" name="q" style="width:210px;" />
             </div>
+            <!--</form>-->
             <button class="navbar-toggler d-flex d-lg-none order-3 p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-label="Toggle navigation">
                 <i class="bi bi-three-dots"></i>
             </button>
@@ -155,7 +129,7 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><h6 class="dropdown-header">v5 releases</h6></li>
                             <li>
-                                <a class="dropdown-item d-flex align-items-center justify-content-between active" aria-current="true" href="/getting-started/introduction/">
+                                <a class="dropdown-item d-flex align-items-center justify-content-between active" aria-current="true" href="/">
                                     Latest (5.0.x)
                                     <i class="bi bis bi-check2 ms-auto"></i>
                                 </a>
