--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -239,7 +239,7 @@
                 Document reviewed for {{ page.version_review }}
                 {% else %}
                 Document not reviewed yet, might be outdated. Please,
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSclcND_ZoRdwqW-GvBus9gAaA9Ek-130M3FcC6qk7huWxCfvA/viewform?usp=pp_url&entry.743568020=/math/geometry2d/&entry.593163446=1" target="_blank">let us know</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSclcND_ZoRdwqW-GvBus9gAaA9Ek-130M3FcC6qk7huWxCfvA/viewform?usp=pp_url&entry.743568020={{ page.url }}" target="_blank">let us know</a>
                 if you find something invalid here.
                 {% endif %}
             </div>
